# OpenCV

./: CMakeLists.txt  main.cpp
